# dustcastle

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.beads/.beads/: interactions.jsonl  issues.jsonl
.github/workflows/: publish.yml
docs/: dustcastle.ansi.txt  dustcastle.ansi.w100.txt  dustcastle.ansi.w80.txt  dustcastle.ascii.w100.txt  dustcastle.ascii.w60.txt  dustcastle.ascii.w80.txt  dustcastle.block-shaded.txt  dustcastle.block-solid.txt  dustcastle.halfblock.txt  dustcastle.halfblock.w60.txt  dustcastle.halfblock.w72.txt  dustcastle.halfblock.w80.txt  v1-status.md
docs/adr/: 0001-nix-store-as-the-toolchain-mechanism.md  0002-consume-sandcastle-via-provider-factories.md  0003-container-boundary-for-v1.md  0004-project-deps-pure-default-explicit-impurity.md  0004a-cargo-deps-via-cargohash-fetchcargovendor.md  0005-sandbox-secrets-and-egress.md  0006-ecosystem-detection-owned-lockfile-router.md  0007-store-lifecycle-management.md  0008-rootless-store-install.md  0009-no-project-local-config.md  0010-agent-llm-egress.md  0011-production-egress-proxy-container.md  0012-impure-cached-deps-unified-gc.md  (+10 more)
scripts/: copy-assets.mjs  copy-assets.ts
src/: version.ts
test/fixtures/python-loose-sample/: pyproject.toml  requirements.in  test_sample.py
test/fixtures/python-poetry-sample/: pyproject.toml  test_sample.py
test/fixtures/rust-crate-sample/: Cargo.toml
test/fixtures/rust-crate-sample/src/: lib.rs
(+207 files in other folders)
